apps/papercut-ng/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: papercut-ng
  labels:
    name: papercut-ng
