apps/papercut-ng/service-papercut-ng.yaml
apiVersion: v1
kind: Service
metadata:
  name: papercut-ng
  namespace: papercut-ng
spec:
  selector:
    app: papercut-ng
  ports:
    - name: http
      protocol: TCP
      port: 9191
      targetPort: 9191
    - name: https
      protocol: TCP
      port: 9192
      targetPort: 9192
  type: ClusterIP
